last marginal issue of overflowing fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ padding:0;
 box-sizing: border-box;
 font-family: "Inter", sans-serif;
 font-family: "Arimo", sans-serif;
+ outline:1px solid red;
+}
 
 
 }
@@ -70,7 +72,7 @@ nav{
 /* the banner section */
 header{
      background-image:  linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),url('./assets/banner.jpg') ;
-        width:100vw;
+        width:100%;
         height:100vh;
         background-size:cover;
         background-position: center;
@@ -394,7 +396,7 @@ font-weight: 700;
 
 .stats-container{
 
-    width:1100px;
+    
 
     margin:0 auto 60px;
 
@@ -440,7 +442,7 @@ font-weight: 700;
 
 .event-container{
 
-    width:1100px;
+    
 
     margin:0 auto 70px;
 
@@ -496,9 +498,9 @@ font-weight: 700;
 
 .ai-assistant{
 
-    width:900px;
+    
 
-    margin:auto;
+    margin:0 auto;
 
     background:white;
 
@@ -616,12 +618,13 @@ font-weight: 700;
 /* footer section */
 
 footer{
+    margin: 0 auto;
 background: #0d1b2a;
-padding: 40px 10%;
+padding: 40px ;
 }
 
 .footer-up{
-
+    
     display:flex;
     justify-content: space-between;
     align-items:center;
